Fixed Portfolio page CSS for easier readablility.

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h3 {
   font-family: 'Times New Roman', Times, serif;
   bottom: 30px; 
   width: 100%;
-  background-color: rgb(182, 186, 243, 0.8);
+  background-color: rgb(182, 186, 243, 0.95);
   font-size: 18px;
 }
 
